tests/misc_tests/nlist_ui_tests/nlist_pat_rem_in_middle_err.rs
use nlist::{nlist, nlist_pat};

fn main() {
    let nlist_pat![.., _] = nlist![3, 5, 8];
}